fix: layout issue of having long text in request body editor

--- a/packages/elements/src/styles/_API.scss
+++ b/packages/elements/src/styles/_API.scss
@@ -20,7 +20,7 @@
   }
 
   .ContentViewer {
-    width: min-content;
+    width: calc(100% - 300px);
   }
 }
 
